# rust-api

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
migrations/: 20250120_create_users_table.sql
src/: handlers.rs  main.rs
src/config/: mod.rs
src/errors/: mod.rs
src/handlers/: health.rs  mod.rs  user_handler.rs
src/middleware/: auth.rs  logging.rs
src/models/: mod.rs  response.rs  user.rs
src/repositories/: user_repository.rs
src/routes/: mod.rs
src/services/: user_service.rs
